# OSCourseProject

./: .gitignore  CMakeLists.txt
.trunk/: trunk.yaml
include/: player.hpp  session.hpp  tools.hpp
src/: client.cpp  gamedemon.cpp  server.cpp
tests/: tests.cpp
